7904123: Switch the Asmtools build system to use JDK 17 (LTS)